# STM32-Learn

./: LICENSE  README.md  Readme.md
005串口打印信息/STM32F407_ProjectTemplate/app/: main.c
005串口打印信息/STM32F407_ProjectTemplate/module/: stm32f4xx_it.c
STM32F407/: .gitignore  CMakeLists.txt  README.md  stm32f407vetx_flash.ld
STM32F407/.cache/clangd/index/: DMA_Init.c.2AD3872450423A72.idx  DMA_Init.h.CEA8A6B730FDF069.idx  MY_your_driver.c.2E529574798066DF.idx  MY_your_driver.h.313C42D9CEE0B144.idx  NVIC_Init.c.DE3E7C7E99D370D5.idx  NVIC_Init.h.E48F0705A4C1C0E2.idx  OV2640_DCMI_Init.c.42E190CE27C39FAD.idx  OV2640_DCMI_Init.h.ACDC9DF9532E26B8.idx  OV2640_DMA_Init.c.225283BBE4CB9BDD.idx  OV2640_DMA_Init.h.0BE6C9FD6EFD3D37.idx  OV2640_init.c.A0B9456555DBFBF2.idx  OV2640_init.h.1005AB2D89EA7B86.idx  OV2640_reg.h.ECBCD164C17A7397.idx  SPI_Control.c.9976DCA787EEB622.idx  SPI_Control.h.61FF2B3AE47E22CD.idx  SPI_Screen_init.c.E6A1FD295E234502.idx  SPI_Screen_init.h.EB67FD31CAABC898.idx  Test_code.h.D5735DE71FDA9DB1.idx  board.c.A5EC22D90A12366F.idx  board.h.574E6A334906461E.idx  bsp_uart.c.F3248983E6680EFD.idx  bsp_uart.h.68CA33CC8D31F466.idx  cmd_handlers.c.E144B7C1F0D445E4.idx  cmd_handlers.h.3068818C9BD1728A.idx  core_cm4.h.880113C699AE81B2.idx  core_cmFunc.h.C391E41C8984BC84.idx  core_cmInstr.h.47BB2A30430732C9.idx  core_cmSimd.h.DF3634F39DF552B2.idx  crc16.c.4D7C8586D92D6695.idx  crc16.h.5E4FD0810ECC7788.idx  hdlc_core.c.EBE2BA06EC57A035.idx  hdlc_core.h.FD7B7830873046C4.idx  i2c_handle.c.86C115F8828B2546.idx  i2c_handle.h.C4064C19791BB794.idx  i2c_init.c.1238A755A3105412.idx  i2c_init.h.748BDA7EF167C75C.idx  main.c.4FCB0EAF19AE536B.idx  misc.c.7B5C0879AAFE8855.idx  misc.h.A278EFB4A211F849.idx  response.c.6D09FC5E5E8C14AA.idx  (+87 more)
STM32F407/PeripheralModule/OV2640/: OV2640_DCMI_Init.c  OV2640_DCMI_Init.h  OV2640_DMA_Init.c  OV2640_DMA_Init.h  OV2640_init.c  OV2640_init.h  OV2640_reg.h
STM32F407/PeripheralModule/SPI_Screen/: SPI_Screen_init.c  SPI_Screen_init.h
STM32F407/app/: main.c
STM32F407/board/: board.c  board.h
STM32F407/bsp/DCMI/: DCMI.c  DCMI.h
STM32F407/bsp/DMA/: DMA_Init.c  DMA_Init.h
STM32F407/bsp/I2C/: i2c_handle.c  i2c_handle.h  i2c_init.c  i2c_init.h
STM32F407/bsp/NVIC/: NVIC_Init.c  NVIC_Init.h
STM32F407/bsp/Response/: response.c  response.h
STM32F407/bsp/SPI/: SPI_Control.c  SPI_Control.h  Test_code.c  Test_code.h  spi_init.c  spi_init.h
STM32F407/bsp/uart/: bsp_uart.c  bsp_uart.h
STM32F407/libraries/STM32F4xx_StdPeriph_Driver/inc/: stm32f4xx_dcmi.h  stm32f4xx_dma.h  stm32f4xx_usart.h
STM32F407/libraries/STM32F4xx_StdPeriph_Driver/src/: stm32f4xx_dcmi.c  stm32f4xx_dma.c  stm32f4xx_usart.c
STM32F407/module/: stm32f4xx_it.c  stm32f4xx_it.h
STM32F407/project/MDK(V5)/: .clangd  .gitignore  MDK(V5).code-workspace  Project.uvguix.Ankesiqi  Project.uvoptx  Project.uvprojx  STM32F407_LCKFB.code-workspace
STM32F407/project/MDK(V5)/.eide/: eide.json  eide.yml
STM32F407/project/MDK(V5)/Listings/: Project.map
STM32F407/project/MDK(V5)/Objects/: Project.axf  Project.build_log.htm  Project.hex  Project.htm  Project.lnp  Project_Project.dep  board.crf  bsp_uart.crf  bsp_uart.d  dcmi.crf  dcmi.d  dma_init.crf  dma_init.d  i2c_handle.crf  i2c_handle.d  i2c_init.crf  i2c_init.d  main.crf  main.d  misc.crf  nvic_init.crf  nvic_init.d  ov2640_dcmi_init.crf  ov2640_dcmi_init.d  ov2640_dma_init.crf  ov2640_dma_init.d  ov2640_init.crf  ov2640_init.d  response.crf  response.d  spi_control.crf  spi_init.crf  spi_screen_init.crf  spi_screen_init.d  stm32f4xx_adc.crf  stm32f4xx_can.crf  stm32f4xx_can.d  stm32f4xx_cec.crf  stm32f4xx_crc.crf  stm32f4xx_cryp.crf  (+47 more)
STM32F407/protocol/: MY_your_driver.c  MY_your_driver.h  cmd_handlers.c  cmd_handlers.h  crc16.c  crc16.h  hdlc_core.c  hdlc_core.h
STM32F407/protocol/protocol_driver/: i2c_driver.c  i2c_driver.h  spi_driver.c  spi_driver.h  uart_driver.c  uart_driver.h
STM32调试工具/STM32F407_ProjectTemplate/app/: main.c
TOOL_APP/: flash_tool_gui.py  main.py
TOOL_APP/app/: CMD.py  main_window.py  serial_manager.py
TOOL_APP/protocol/: crc16.py  hdlc.py
TOOL_APP/utils/: hex_viewer.py
(+174 files in other folders)
